kubernetes/deploy-app.yaml
apiVersion: v1
kind: Service
metadata:
  name: acnhcompanion-api-stable
  namespace: acnhcompanion-api
  labels:
    app.kubernetes.io/name: acnhcompanion-api-stable
    app.kubernetes.io/instance: acnhcompanion-api
spec:
  selector:
    app.kubernetes.io/name: acnhcompanion-api-stable
  ports:
    - port: 80
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acnhcompanion-api-stable
  namespace: acnhcompanion-api
  labels:
    app.kubernetes.io/name: acnhcompanion-api-stable
    app.kubernetes.io/instance: acnhcompanion-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: acnhcompanion-api-stable
  template:
    metadata:
      labels:
        app.kubernetes.io/name: acnhcompanion-api-stable
        app.kubernetes.io/instance: acnhcompanion-api
    spec:
      containers:
        - name: acnhcompanion-api
          image: samanthaemilyrachelb/acnhcompanion-api:stable
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
