kubernetes/deploy-application-old.yaml
apiVersion: v1
kind: Service
metadata:
  name: acnh-express-api
spec:
  type: ClusterIP
  ports:
    - port: 443
      targetPort: 3000
  selector:
    app: acnh-express-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acnh-express-api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: acnh-express-api
  template:
    metadata:
      labels:
        app: acnh-express-api
    spec:
      containers:
        - name: acnh-api
          image: samanthaemilyrachelb/acnhapi:latest
          ports:
            - containerPort: 3000
---
# Access external mongodb server via private ip
apiVersion: v1
kind: Service
metadata:
  name: mongodb
spec:
  ports:
    - name: mongodb
      protocol: TCP
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mysql
subsets:
  - addresses:
      - ip: 10.137.0.8
    ports:
      - name: mongodb
        port: 27017
