kubernetes/deploy_api.yaml
apiVersion: v1
kind: Service
metadata:
  name: acnhapi
spec:
  selector:
    app: acnhapi
    tier: backend
  ports:
    - port: 3000
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acnhapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: acnhapi
      tier: backend
  template:
    metadata:
      labels:
        app: acnhapi
        tier: backend
    spec:
      containers:
        - name: acnhapi
          image: "samanthaemilyrachelb/acnhapi:latest"
          ports:
            - containerPort: 3000
