kubernetes/deploy_frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    app: acnhapi
    tier: frontend
spec:
  type: NodePort
  ports:
    - port: 80
      protocol: TCP
      name: http
    - port: 443
      protocol: TCP
      name: https
  selector:
    app: acnhapi
    tier: frontend
