kubernetes/setup-mongo-connection.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: acnhcompanion-api
  labels:
    app.kubernetes.io/name: MongoDB
spec:
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
---
apiVersion: v1
kind: Endpoints
metadata:
  name: mongodb
  namespace: acnhcompanion-api
  labels:
    app.kubernetes.io/name: MongoDB
subsets:
  - addresses:
      - ip: 10.118.0.8
    ports:
      - name: mongodb
        port: 27017
